examples/invalid/semantics/use_after_move.aru
module examples.invalid.semantics.useAfterMove

func consume(own text: str) {
}

func main() {
    let message = "ola"
    consume(message)

    // expected: memory error; `message` was moved into `consume`.
    let again = message
}